fix 1.button style 2.word-wrap 3.font -size

--- a/WEB/WEB/static/css/index2.css
+++ b/WEB/WEB/static/css/index2.css
@@ -1,9 +1,5 @@
-h4{
-  word-wrap: break-word;
-}
-span{
- margin-left: 5px;
-}
+
+
 input[type="radio"] + label:hover{
   background-color:;
   border:1px solid #000000;
